--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,31 @@
-.nav-link {float:right
-width: 100%}
-
-h2 {
+.lukeevans {
     background-color: red;
-    height: 100px;
-    width: 100px;
+    height: 40px;
+    width: -20px;
 }
 
-section form {
-    border: black;
+body{
+background-image: url("/assets/images/backgroundimg.jpg");
+line-height: 200%;
+font-size: 18px;
+text-align: justify
 }
 
-.footer {
-    background-color:grey
+.footer{
+    background-color:grey;
+   display: grid;
+   text-align: center;
+   margin-top: 200px;
 }
+
+p {
+    display:inline-start;
+}
+
+img {
+    display:inline-block;
+    float:left;
+}
+
+
+
