--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,24 @@
 .lukeevans {
-    background-color: red;
+    background-color:yellow;
     height: 40px;
     width: -20px;
 }
 
 body{
-background-image: url("/assets/images/backgroundimg.jpg");
+background-image: url("../images/backgroundimg.jpg");
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
 line-height: 200%;
 font-size: 18px;
 text-align: justify
 }
 
-.footer{
+footer{
     background-color:grey;
    display: grid;
    text-align: center;
-   margin-top: 200px;
 }
 
 p {
