--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,67 +1,65 @@
-
-
-body{
--webkit-background-size: cover;
--moz-background-size: cover;
--o-background-size: cover;
-background-size: cover;
-line-height: 100%;
-font-size: 20px;
-text-align: justify
+body {
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    line-height: 100%;
+    font-size: 20px;
+    text-align: justify
 }
 
 .navbar-brand {
     padding-left: 1rem;
-    background-color:yellowgreen;
+    background-color: yellowgreen;
     background-size: 200px 100px;
-    color: black ;
+    color: black;
 }
 
 .navbar-nav ul {
-    margin-left:auto;
+    margin-left: auto;
 }
 
 .lukeevans {
-    background-color:yellowgreen;
+    background-color: yellowgreen;
 }
+
 .page-header {
-    padding-top:2%;
+    padding-top: 2%;
     padding-bottom: 2%;
 }
 
-footer{
-    background-color:grey;
-   display: grid;
-   text-align: center;
-   font-size: 14px;
-   line-height: 3rem;
+footer {
+    background-color: grey;
+    display: grid;
+    text-align: center;
+    font-size: 14px;
+    line-height: 3rem;
 }
 
 p {
-    float:inline-start;
+    float: inline-start;
+    font-family: Baskerville, "Baskerville Old Face", "Goudy Old Style", Garamond, "Times New Roman", serif;
 }
 
 img {
-    display:inline-block;
-    float:left;
-    margin-right:2%;
+    display: inline-block;
+    float: left;
+    margin-right: 2%;
 }
 
 .container {
-    background-color:white;
-    margin:5%;
+    background-color: white;
+    margin: 5%;
     margin-left: 1rem;
     padding-right: 1rem;
 }
 
 .row {
-    margin-top:2%;
+    margin-top: 2%;
 }
 
-
-
-.header{
-height: 100vh;
+.header {
+    height: 100vh;
 }
 
 button {
@@ -74,23 +72,17 @@ button {
     margin-right: 3rem;
 }
 
-
-
 h1 {
     color: yellowgreen;
-    
 }
 
-.meteorengine{
+.meteorengine {
     position: absolute;
-    right:0;
-    bottom:0;
+    right: 0;
+    bottom: 0;
     min-width: 100%;
     min-height: 100%;
     width: auto;
     height: auto;
     z-index: -1;
 }
-
-
-
