--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,12 @@ body {
 .navbar-brand {
     padding-left: 1rem;
     background-color: yellowgreen;
-    background-size: 200px 100px;
+    background-size: 100px 100px;
     color: black;
+}
+
+nav navbar {
+    border-bottom: 6px solid orangered;
 }
 
 .navbar-nav ul {
@@ -21,6 +25,8 @@ body {
 
 .lukeevans {
     background-color: yellowgreen;
+    margin-left: 6%;
+    background-size: ;
 }
 
 .page-header {
@@ -34,6 +40,7 @@ footer {
     text-align: center;
     font-size: 14px;
     line-height: 3rem;
+    border-top: 8px solid yellowgreen;
 }
 
 p {
@@ -49,17 +56,13 @@ img {
 
 .container {
     background-color: white;
-    margin: 5%;
-    margin-left: 1rem;
+    margin: 3%;
+    margin-left: 5rem;
     padding-right: 1rem;
 }
 
 .row {
     margin-top: 2%;
-}
-
-.header {
-    height: 100vh;
 }
 
 button {
@@ -76,6 +79,12 @@ h1 {
     color: yellowgreen;
 }
 
+.header {
+    height: 100vh;
+    width: 100%;
+    line-height: 2;
+}
+
 .meteorengine {
     position: absolute;
     right: 0;
@@ -85,4 +94,8 @@ h1 {
     width: auto;
     height: auto;
     z-index: -1;
+}
+
+.h4 {
+    background-color: yellowgreen;
 }
