--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,7 @@ ul {
     background-color: white;
     margin: 3%;
     margin-left: 5rem;
+    margin-bottom: 6rem;
     padding-right: 1rem;
     margin-bottom: 5%;
 }
