--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,12 @@
             margin-bottom: 1rem;
         }
         
+        .card-img {
+            width: 100%;
+            height: 15vw;
+            object-fit: cover;
+        }
+        
         .card {
             margin: 3%;
             margin-left: 3rem;
