--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,122 +1,173 @@
-        body {
-            -webkit-background-size: cover;
-            -moz-background-size: cover;
-            -o-background-size: cover;
-            background-size: cover;
-            line-height: 100%;
-            font-size: 20px;
-            text-align: justify
-        }
-        
-        .navbar-brand {
-            background-color: yellowgreen;
-            text-align: center;
-            padding-left: 5rem;
-            padding-right: 5rem;
-            font-size: 28px;
-            text-align: justify;
-        }
-        
-        footer {
-            background-color: grey;
-            display: grid;
-            text-align: center;
-            font-size: 14px;
-            line-height: 2rem;
-            border-top: 6px solid yellowgreen;
-        }
-        
-        .meteorengine {
-            position: fixed;
-            right: 0;
-            bottom: 0;
-            min-width: 100%;
-            min-height: 100%;
-        }
-        
-        p {
-            float: inline-start;
-            color: whitesmoke;
-            font-family: Baskerville, "Baskerville Old Face", "Goudy Old Style", Garamond, "Times New Roman", serif;
-        }
-        
-        ul {
-            color: white;
-        }
-        
-        .container {
-            background-color: white;
-            margin: 3%;
-            margin-left: 5rem;
-            margin-bottom: 6rem;
-            padding-right: 1rem;
-            margin-bottom: 5%;
-        }
-        
-        img {
-            display: inline-block;
-            float: left;
-            margin-right: 2%;
-        }
-        
-        .row {
-            margin-top: 2%;
-        }
-        
-        button {
-            margin-bottom: 1rem;
-        }
-        
-        .card-img {
-            width: 100%;
-            height: 15vw;
-            object-fit: cover;
-        }
-        
-        .card {
-            margin: 3%;
-            margin-left: 3rem;
-            margin-right: 3rem;
-            margin-bottom: 5%;
-        }
-        
-        h1 {
-            color: yellowgreen;
-        }
-        
-        .header {
-            height: 100%;
-            width: 100%;
-            line-height: 1;
-        }
-        
-        .h4 {
-            background-color: yellowgreen;
-        }
-        
-        .form-group {
-            color: white;
-        }
-        
-        .contact {
-            background-color: white;
-            margin: 3%;
-            margin-left: 20rem;
-            padding-right: 1rem;
-        }
-        
-        @media screen and (max-width: 980px) {
-            body (max-width: 980;
-            )
-        }
-        
-        @media screen and (max-width: 768px) {
-            body (max-width: 768px;
-            margin-top: 180px;
-            )
-        }
-        
-        @media screen and (max-width:640px) {
-            body maxwidth: 640px;
-            margin-top: 225px;
-        }
+body {
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    line-height: 100%;
+    font-size: 20px;
+    text-align: justify
+}
+
+.p1 {
+    color: black;
+}
+
+.aboutmesection {
+border: 10px dotted white;
+padding: 15px;
+background: black;
+background-clip: padding-box darkblue;
+border-bottom: -5rem;
+
+}
+
+.aboutmeborder {
+    background-color: black;
+    text-align: center;
+}
+
+.navbar-brand {
+    background-color: yellowgreen;
+    text-align: center;
+    padding-left: 5rem;
+    padding-right: 5rem;
+    font-size: 28px;
+    text-align: justify;
+}
+
+.birdtrackerapp {
+    background-color: black;
+}
+
+.goodreadme {
+    background-color: black; 
+    color: #007BFF;
+}
+
+.subheading {
+    background-color: black;
+    text-align: center;
+}
+
+.codegenerator {
+    background-color:black; 
+}
+
+footer {
+    background-color: grey;
+    display: grid;
+    text-align: center;
+    font-size: 14px;
+    line-height: 2rem;
+    border-top: 6px solid yellowgreen;
+}
+
+.meteorengine {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+}
+
+p {
+    float: inline-start;
+    color: black;
+    font-family: Baskerville, "Baskerville Old Face", "Goudy Old Style", Garamond, "Times New Roman", serif;
+}
+
+ul {
+    color: white;
+    font-family: "Lucida Console", Courier, monospace;
+}
+
+.container1 {
+    background-color: white;
+    margin: 3%;
+    margin-left: 45rem;
+    margin-bottom: 5rem;
+    padding-right: 7rem;
+    margin-bottom: 5%;
+}
+
+img {
+    display: inline-block;
+    float: left;
+    margin-right: 2%;
+}
+
+.row {
+    margin-top: 2%;
+}
+
+button {
+    margin-bottom: 1rem;
+}
+
+.card-img {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+}
+
+.card {
+    margin: 3%;
+    margin-left: 3rem;
+    margin-right: 3rem;
+    margin-bottom: 5%;
+}
+
+h1 {
+    color: yellowgreen;
+}
+
+.img-thumbnail {
+    margin-left:7rem;
+}
+
+h5 {
+    color: yellowgreen;
+    text-align:center;
+}
+
+.border {
+ border-color: black;
+}
+
+.header {
+    height: 100%;
+    width: 100%;
+    line-height: 1;
+}
+
+.h4 {
+    background-color: yellowgreen;
+    padding-top: 10px;
+}
+
+.form-group {
+    color: white;
+}
+
+.contact {
+    background-color: white;
+    margin: 3%;
+    margin-left: 20rem;
+    padding-right: 1rem;
+}
+
+@media screen and (max-width: 980px) {
+    body (max-width: 980;
+    )
+}
+
+@media screen and (max-width: 768px) {
+    body (max-width: 768px;
+    margin-top: 180px;
+    )
+}
+
+@media screen and (max-width:640px) {
+    body maxwidth: 640px;
+    margin-top: 225px;
+}
